--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-.carousel-inner .carousel-item-right.active,
+/* .carousel-inner .carousel-item-right.active,
 .carousel-inner .carousel-item-next {
   transform: translateX(33.33%);
 }
@@ -15,4 +15,13 @@
 
 .App > div {
   margin-bottom: 75px;
+} */
+
+.carousel-inner {
+  height: inherit;
+  width: inherit;
+}
+
+.carousel-control-next, .carousel-control-prev {
+  z-index: 0;
 }
